[package]
name = "whcanrc-assisted-listening"
version = "0.1.0"
edition = "2021"
description = "Low-latency WebRTC audio streaming server for assisted listening"
license = "MIT"

[[bin]]
name = "whcanrc-assisted-listening"
path = "src/main.rs"

[dependencies]
# Audio capture
cpal = "0.15"

# WebRTC
webrtc = "0.11"

# HTTP server
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization & config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Audio encoding
audiopus = "0.3.0-rc.0"

# TLS (self-signed for LAN getUserMedia support)
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }

# QR code
qrcode = "0.14"

# WebTransport
wtransport = "0.7"

# Utilities
anyhow = "1"
bytes = "1"
ringbuf = "0.4"
base64 = "0.22"
socket2 = "0.5"

# Windows service support (Windows only)
[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
windows = { version = "0.62", features = ["Win32_NetworkManagement_QoS", "Win32_Networking_WinSock", "Win32_System_IO"] }

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
rustls = { version = "0.23", features = ["ring"] }
tower = { version = "0.5", features = ["util"] }
